--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,33 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
-  background-color: black;
-  color: white;
+  font-family: Arial, sans-serif;
+  background-color: #f4f5f7;
+  color: #333333;
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+@media (max-width: 768px) {
+  /* モバイルデバイス向けのスタイル */
+}
+
+@media (min-width: 1025px) {
+  /* デスクトップデバイス向けのスタイル */
 }
