--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,10 @@
 .container {
   width: 100%;
-  max-width: 960px;
+  max-width: 1280px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container_header {
+  width: 100%;
 }
