--- a/src/components/layouts/Navigation/Navigation.module.css
+++ b/src/components/layouts/Navigation/Navigation.module.css
@@ -20,7 +20,11 @@
 }
 
 .tips_icons {
-  flex: 0.2;
+  flex: 0.25;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0 8px;
   padding-top: 5px;
 }
 
