--- a/src/components/layouts/Header/Header.module.css
+++ b/src/components/layouts/Header/Header.module.css
@@ -1,23 +1,27 @@
 .container {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   border-bottom: solid 1px;
-  height: 70px;
 }
 
 .header_logo {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 0.2;
+  flex: 0.25;
+  gap: 0px 20px;
+  border-right: solid 1px;
 }
 
 .logo_image {
-  width: 130px;
-  height: 90px;
+  width: 120px;
+  height: 80px;
 }
 
 .navigation {
-  flex: 0.8;
+  flex: 0.75;
+  height: 100%;
 }
