--- a/src/components/layouts/Navigation/Navigation.module.css
+++ b/src/components/layouts/Navigation/Navigation.module.css
@@ -1,22 +1,26 @@
 .navigation {
   width: 100%;
+  height: 100%;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
-  margin: 0;
 }
 
 .calendar_arrow {
   flex: 0.1;
-  padding-top: 5px;
 }
 
 .arrow {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .display_date {
   flex: 0.55;
+}
+
+.display_date > h1 {
+  font-weight: normal;
 }
 
 .tips_icons {
@@ -25,13 +29,20 @@
   align-items: center;
   justify-content: center;
   gap: 0 8px;
-  padding-top: 5px;
 }
 
 .display_type {
   flex: 0.1;
-  gap: 5px;
-  height: 50px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.display_type_box {
+  margin: 0 auto;
+  margin-right: 20px;
+  width: 80px;
+  height: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
