--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,14 @@
 .container {
-  width: 100%;
-  max-width: 1280px;
   margin-right: auto;
   margin-left: auto;
+  height: 100vh;
 }
 
 .container_header {
   width: 100%;
+  height: 10%;
+}
+
+.container_board {
+  height: 90%;
 }
