--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,12 +7,19 @@ html {
   background-color: #f4f5f7;
   color: #333333;
   font-size: 16px;
+  width: 100%;
+  height: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
   line-height: 1.5;
+  height: 100%;
+}
+
+.component {
+  height: 100%;
 }
 
 a {
