--- a/src/components/layouts/Header/Header.module.css
+++ b/src/components/layouts/Header/Header.module.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  border-bottom: solid 1px;
+  border-bottom: solid 1px #d0d0d0;
 }
 
 .header_logo {
@@ -13,7 +13,6 @@
   align-items: center;
   flex: 0.25;
   gap: 0px 20px;
-  border-right: solid 1px;
 }
 
 .logo_image {
