--- a/src/components/layouts/Navigation/Navigation.module.css
+++ b/src/components/layouts/Navigation/Navigation.module.css
@@ -11,8 +11,17 @@
 
 .arrow {
   display: flex;
+  gap: 0 20px;
   justify-content: center;
   align-items: center;
+}
+
+.back {
+  font-size: 36px;
+}
+
+.forward {
+  font-size: 36px;
 }
 
 .display_date {
