--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,17 @@ a {
 ul,
 ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
 @media (max-width: 768px) {
