--- a/src/components/CalendarBoardOverview/CalendarBoardOverview.module.css
+++ b/src/components/CalendarBoardOverview/CalendarBoardOverview.module.css
@@ -6,61 +6,17 @@
 
 .overview_calendar {
   flex-basis: 62%;
+  height: 100%;
   border-bottom: solid 1px #d0d0d0;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 2rem;
 }
 
-.overview_calendar_navigation {
-  width: 75%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 4rem;
-  margin-bottom: 1rem;
-}
-
-.overview_calendar_elements {
-  width: 80%;
-}
-
-.week {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  text-align: center;
-  margin-bottom: 0.7rem;
-}
-
-.elements {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-row-gap: 1.5rem;
-  text-align: center;
-}
-
-.element {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.element:hover::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: calc(50% + 10px);
-  height: calc(100% + 15px);
-  background-color: #73b8e2;
-  border-radius: 50%;
-  z-index: -1;
-}
-
-.element:hover {
-  color: #ffffff;
+.calendar_container {
+  width: 100%;
 }
 
 .overview_options {
