--- a/src/components/CalendarBoard/CalendarBoard.module.css
+++ b/src/components/CalendarBoard/CalendarBoard.module.css
@@ -24,13 +24,22 @@
 }
 
 .days {
-  height: 100%;
+  margin: 0;
   padding: 8px 0;
   border-left: solid 1px #d0d0d0;
+  font-size: 0.9rem;
 }
 
 .elements_grid {
   flex-basis: 95%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+}
+
+.elements_container {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
