--- a/src/components/CalendarElement/CalendarElement.module.css
+++ b/src/components/CalendarElement/CalendarElement.module.css
@@ -2,14 +2,16 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  height: 100%;
   border: solid 1px #d0d0d0;
   border-top: none;
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
 }
 
 .element_event {
   margin-top: 1rem;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px 0;
