--- a/src/components/elements/NavigationArrow/NavigationArrow.module.css
+++ b/src/components/elements/NavigationArrow/NavigationArrow.module.css
@@ -11,13 +11,17 @@
 }
 
 .large {
-  font-size: 36px;
+  font-size: 2rem;
 }
 
 .medium {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .small {
-  font-size: 18px;
+  font-size: 1rem;
+}
+
+.tiny {
+  font-size: 0.8rem;
 }
