--- a/src/components/elements/OverviewCalendar/OverviewCalendar.module.css
+++ b/src/components/elements/OverviewCalendar/OverviewCalendar.module.css
@@ -12,7 +12,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.navigation_date {
+  font-size: 0.9rem;
 }
 
 .overview_calendar_elements {
@@ -24,19 +28,39 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   text-align: center;
-  margin-bottom: 0.7rem;
+  margin-bottom: 0.2rem;
 }
 
 .elements {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-row-gap: 1.2rem;
+  grid-row-gap: 0.5rem;
   text-align: center;
 }
 
 .element {
   position: relative;
   cursor: pointer;
+}
+
+.today {
+  position: relative; /* 相対位置指定 */
+  color: #ffffff;
+  z-index: 2;
+}
+
+.today::before {
+  content: '';
+  position: absolute; /* 絶対位置指定 */
+  display: block;
+  width: 1.1rem;
+  height: 1.1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: rgba(0, 102, 204, 0.8);
+  z-index: -1;
 }
 
 .element:hover::before {
