--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,11 +4,11 @@
   height: 100vh;
 }
 
-.container_header {
+.header {
   width: 100%;
   height: 10%;
 }
 
-.container_board {
+.board {
   height: 90%;
 }
