--- a/src/components/CalendarElement/CalendarElement.module.css
+++ b/src/components/CalendarElement/CalendarElement.module.css
@@ -1,4 +1,4 @@
-.element {
+.container {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -9,7 +9,7 @@
   font-size: 0.85rem;
 }
 
-.element_date {
+.date {
   background-color: #f0f0f0; /* 背景色 */
 }
 
@@ -33,7 +33,7 @@
   z-index: -1;
 }
 
-.element_event {
+.events {
   margin-top: 1rem;
   max-height: 100%;
   display: flex;
@@ -41,7 +41,7 @@
   gap: 10px 0;
 }
 
-.element_title {
+.event_title {
   padding: 0 2px;
   margin: 0 3px;
   background-color: rgba(0, 102, 204, 0.8);
