--- a/src/components/elements/OverviewCalendar/OverviewCalendar.module.css
+++ b/src/components/elements/OverviewCalendar/OverviewCalendar.module.css
@@ -20,6 +20,9 @@
   grid-template-columns: repeat(7, 1fr);
   grid-row-gap: 0.5rem;
   text-align: center;
+}
+
+.element {
   position: relative;
   cursor: pointer;
 }
@@ -41,5 +44,23 @@
   transform: translate(-50%, -50%);
   border-radius: 50%;
   background-color: rgba(0, 102, 204, 0.8);
+  z-index: -1;
+}
+
+.element:hover {
+  color: #ffffff;
+}
+
+.element:hover::before {
+  content: '';
+  position: absolute; /* 絶対位置指定 */
+  display: block;
+  width: 1.1rem;
+  height: 1.1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: rgba(0, 102, 204, 0.4);
   z-index: -1;
 }
